# gigacode-cloud

./: .gitignore  README.md
gigachat_code/: README.md  __init__.py  cli.py  main.py  pyproject.toml
gigachat_code/config/: __init__.py  settings.py
gigachat_code/controllers/: __init__.py  chat_controller.py  main.py  setup_controller.py
gigachat_code/core/: __init__.py  api_client.py  assistant.py  code_assistant.py
gigachat_code/gigachat_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
gigachat_code/models/: __init__.py  config.py  entities.py  message.py
gigachat_code/views/: __init__.py  terminal.py  terminal_view.py
