[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigachat-code"
version = "0.1.0"
description = "Аналог Claude Code с использованием GigaChat API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GigaChat Code Team"}
]
keywords = ["gigachat", "ai", "code", "assistant", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
]
dependencies = [
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
gigachat-code = "gigachat_code.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gigachat-code"
Repository = "https://github.com/yourusername/gigachat-code.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["gigachat_code*"]
